# api/openapi.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.3
 info:
-  title: Open ID Connect OpenID Provider API
+  title: Open ID Connect App
   description: |-
-    This is the OIDC OpenID Provider API documentation.
+    This is the OIDC OpenID API documentation.
   termsOfService: https://localhost:1234
   contact:
     email: morning.night.dream@example.com
@@ -15,13 +15,15 @@ externalDocs:
 servers:
   - url: http://localhost:1234
 tags:
-  - name: oidc
-    description: OIDC
+  - name: OP
+    description: OpenID Provider
+  - name: RP
+    description: Relying Party
 paths:
-  /.well-known/openid-configuration:
+  /op/.well-known/openid-configuration:
     get:
       tags:
-        - oidc
+        - OP
       summary: OpenID Provider Configuration
       description: OpenID Provider Configuration
       operationId: openIDConfiguration
@@ -32,6 +34,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/OpenIDConfigurationSchema'
+        '500':
+          description: Internal Server Error
+  /op/auth:
+    get:
+      tags:
+        - OP
+      summary: Authentication Request
+      description: Authentication Request
+      operationId: auth
+      responses:
+        '302':
+          description: Found
+          headers:
+            Location:
+              schema:
+                type: string
+                format: uri
+                example: http://localhost:1234/auth/callback
         '500':
           description: Internal Server Error
 components:
@@ -75,3 +95,114 @@ components:
         - "token_endpoint"
         - "userinfo_endpoint"
         - "revocation_endpoint"
+    AuthRequestSchema:
+      type: object
+      description: https://openid.net/specs/openid-connect-core-1_0.html#AuthRequest
+      properties:
+        scopes:
+          type: array
+          description: https://openid.net/specs/openid-connect-core-1_0.html#ScopeClaims
+          items:
+            type: string
+            enum:
+              - openid
+              - profile
+              - email
+              - address
+              - phone
+              - offline_access
+        response_type:
+          type: string
+          enum:
+            - code
+            - id_token
+            - token
+            - code id_token
+            - code token
+            - id_token token
+            - code id_token token
+        client_id:
+          type: string
+          description: client_id
+          format: uri
+          example: client_id
+        redirect_uri:
+          type: string
+          description: http://localhost:8080
+          format: uri
+          example: http://localhost:8080
+        state:
+          type: string
+          description: state
+          example: state
+        nonce:
+          type: string
+          description: nonce
+          example: nonce
+        response_mode:
+          type: string
+          enum:
+            - query
+            - fragment
+        display:
+          type: string
+          enum:
+            - page
+            - popup
+            - touch
+            - wap
+        prompt:
+          type: string
+          enum:
+            - none
+            - login
+            - consent
+            - select_account
+        max_age:
+          type: integer
+          format: int64
+          minimum: 0
+        ui_locales:
+          type: string
+          description: ui_locales
+          example: ui_locales
+        id_token_hint:
+          type: string
+          description: id_token_hint
+          example: id_token_hint
+        login_hint:
+          type: string
+          description: login_hint
+          example: login_hint
+        acr_values:
+          type: array
+          description: acr_values
+          items:
+            type: string
+        code_challenge:
+          type: string
+          description: code_challenge
+          example: code_challenge
+        code_challenge_method:
+          type: string
+          enum:
+            - plain
+            - S256
+      required:
+        - "scopes"
+        - "response_type"
+        - "client_id"
+        - "redirect_uri"
+        - "state"
+        - "nonce"
+        - "response_mode"
+        - "display"
+        - "prompt"
+        - "max_age"
+        - "ui_locales"
+        - "id_token_hint"
+        - "login_hint"
+        - "acr_values"
+        - "code_challenge"
+        - "code_challenge_method"
+
